attempt fix on mobile parallax image size issue 4

--- a/style.scss
+++ b/style.scss
@@ -124,7 +124,7 @@ body {
     font-size: 3em;
     margin: 10px;
     @media (max-width: 375px) {
-      font-size: 2em;
+      font-size: 1em;
     }
   }
 }
